--- a/web/WEB-INF/templates/newTemplate1.xhtml
+++ b/web/WEB-INF/templates/newTemplate1.xhtml
@@ -21,7 +21,7 @@
                         <ul class="sidebar-nav">
                             <br/>
                             <br/>
-                            <center>  <img  src="recursos/images/usuario/avatar.png" class="img-circle img-responsive"  style="height: 80px;" alt=""/> </center>
+                            <center>  <img  src="#{request.contextPath}/recursos/images/usuario/avatar.png" class="img-circle img-responsive"  style="height: 80px;" alt=""/> </center>
                             <br/>
                             <li class="sidebar-brand">
                                 <a href="#">
@@ -78,10 +78,10 @@
             <!-- jQuery -->
         </div>
         <h:outputScript name="recursos/js/jquery" />
-        <script src="recursos/js/jquery.js" type="text/javascript"></script>
+        <script src="#{request.contextPath}/recursos/js/jquery.js" type="text/javascript"></script>
         <!-- Bootstrap Core JavaScript -->
 
-        <script src="recursos/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="#{request.contextPath}/recursos/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- Menu Toggle Script -->
         <script>
             $("#menu-toggle").click(function (e) {
