--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -48,7 +48,7 @@ ul a{
 section#banner{
 	width: 100%;
 	height: 100%;
-	background-image: url(../images/paginainicio/cheer-in-black.jpg);
+	background-image: url('#{request.contextPath}/recursos/images/paginainicio/cheer-in-black.jpg');
 	background-size: 100%;
 	background-attachment: contain;
 	background-position: center;
@@ -69,7 +69,7 @@ img#logo{
 #jumbotronNosotros{
 	width: 100%;
 	height: 200px;
-	background-image: url('recursos/images/paginainicio/nosotros.jpg'); 
+	background-image: url('#{request.contextPath}/recursos/images/paginainicio/nosotros.jpg'); 
         
         background-attachment: fixed; 
 	background-size: 100% 1000px; 
@@ -77,14 +77,14 @@ img#logo{
 #jumbotronConvocatoria{
 	width: 100%;
 	height: 200px;
-	background-image: url(../images/paginaInicio/convocatoria.jpg); 
+	background-image: url('#{request.contextPath}/recursos/images/paginaInicio/convocatoria.jpg'); 
 	background-size: 100% 1000px; 
 }
 #jumbotronTorneo{
 
 	width: 100%;
 	height: 200px;
-	background-image: url(../images/paginaInicio/torneo.jpg); 
+	background-image: url('#{request.contextPath}/recursos/images/paginaInicio/torneo.jpg'); 
         background-attachment: fixed; 
 	background-size: 100% 1000px; 
 }
@@ -121,7 +121,7 @@ footer{
 	width: 100%;
 	height: 100%;
 	padding: 30px;
-	background-image: url(../images/paginaInicio/torneo.jpg);
+	background-image: url('#{request.contextPath}/recursos/images/paginaInicio/torneo.jpg');
 	
 	float: right;
 }
