--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -69,7 +69,7 @@ img#logo{
 #jumbotronNosotros{
 	width: 100%;
 	height: 200px;
-	background-image: url('/FutbolWeb/resources/images/paginainicio/nosotros.jpg'); 
+	background-image: url('../images/paginainicio/nosotros.jpg'); 
         
         background-attachment: fixed; 
 	background-size: 100% 1000px; 
@@ -77,7 +77,7 @@ img#logo{
 #jumbotronConvocatoria{
 	width: 100%;
 	height: 200px;
-        background-image: url('/FutbolWeb/resources/images/paginainicio/convocatoria.jpg');
+        background-image: url('../images/paginainicio/convocatoria.jpg');
         
 	background-size: 100% 1000px; 
 }
@@ -85,7 +85,7 @@ img#logo{
 
 	width: 100%;
 	height: 200px;
-	 background-image: url('/FutbolWeb/resources/images/paginainicio/torneo.jpg');
+	 background-image: url('../images/paginainicio/torneo.jpg');
         background-attachment: fixed; 
 	background-size: 100% 1000px; 
 }
