Template corregiodo con estilos

--- a/web/WEB-INF/templates/header.xhtml
+++ b/web/WEB-INF/templates/header.xhtml
@@ -5,9 +5,9 @@
     <h:head>
         <title>PRUEBA</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="#{request.contextPath}/recursos/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="#{request.contextPath}/recursos/css/sidebar.css" rel="stylesheet" type="text/css"/>
-        <link href="#{request.contextPath}/recursos/css/buscarpaginausuarios.css" rel="stylesheet" type="text/css"/>
+        <link href="#{request.contextPath}/resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="#{request.contextPath}/resources/css/sidebar.css" rel="stylesheet" type="text/css"/>
+        <link href="#{request.contextPath}/resources/css/buscarpaginausuarios.css" rel="stylesheet" type="text/css"/>
     </h:head>
 </html>
 
