--- a/web/WEB-INF/templates/contenido.xhtml
+++ b/web/WEB-INF/templates/contenido.xhtml
@@ -17,10 +17,10 @@
                 </div>
             </div>
             <!-- /#page-content-wrapper -->
-            <script src="#{request.contextPath}/recursos/js/jquery.js" type="text/javascript"></script>
+            <script src="#{request.contextPath}/resources/js/jquery.js" type="text/javascript"></script>
             <!-- Bootstrap Core JavaScript -->
 
-            <script src="#{request.contextPath}/recursos/js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="#{request.contextPath}/resources/js/bootstrap.min.js" type="text/javascript"></script>
             <!-- Menu Toggle Script -->
             <script>
                 $("#menu-toggle").click(function (e) {
